--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: main
-title: Back-End Curriculum
+title: Data Analytics Curriculum
 ---
 
 <section class="splash">
   <div class="splash-text">
-    <h1>Back-End Curriculum</h1>
-    <p>Your guide to OOP, Ruby, Rails, databases, and more.</p>
+    <h1>Data Analytics Curriculum</h1>
+    <p>Your guide to SQL, Python, Statistics, Visualization, and more.</p>
   </div>
 </section>
 
